- Adding the RecordDefaultTTL and RecordMinimumTTL property to existing DNS providers
- [SimpleDNS Plus 9.x] Fix for preview domain when DNS server supports setting TTL. Fixes records added with 0 TTL.
- [SmarterMail100] Added extra group options and fixing import bug when no target emails set. - Work sponsored by Enterprise Guardian Inc.
- [HyperV] Fix for #212 (Additional VHDX bug)


Version 1.5.0
- [SQL] GetSearchObject - wrong join fixed
- MFA form will resent pin instead of logging in when enter key is pressed
- WHMCS Module v1.1.4
- Global search shows a mailbox for AD users
- [AuditLog] Add missing tasks for VPS2012
- [Twilio] Fixes for updated packages
- [WebDavPortal] Check if user must change password
- [SolidCP.WHMCSModule] ClientEdit hook - fix for MFA
- [SolidCP.WHMCSModule] Fix for PHP8
- Installer support for SQL 2022
- [Exchange] Global search - check additional email addresses for any mailbox types
- Send password reset request for existing users
- [WebDavPortal] Fix "Please wait" dialog hang up if browser page back button pressed
- [WHMCSModule] Improve usability of the Addon and Configurable Options pages
- New quota added - Disable Tenant To Remove Top-Level Domain
- [Exchange] Add room and equipment mailbox settings
- [Exchange] Contact Information label fixed
- [HyperV2012R2+] Add template variables to custom Powershell scripts
- [Exchange] Mail enabling of public folders - check contacts (#165)
- [HyperV2012R2+] Reinstal VM fix (KVP was not set when VM was moved)
- [HyperV2012R2+] KvpExchangeHelper - remove admin password from error logs
- [HyperV2012R2+] DMZ network
- AddPackageAddon - assign IPs and VLANs
- Fix for private / DMZ network custom IPs
- [HyperV2012R2+] Check the VM RAM >= 32
- [Exchange] Filter out illegal characters
- [Exchange] Display name frontend validator
- [Exchange] Use PortalAntiXSS.Encode for litDisplayName (fix for 96637d1)
- [HyperV] DMZ VLAN will be removed from DB when settings changed - fixed